Bug 488992 - Undo/redo actions don't work anymore
Summary: Undo/redo actions don't work anymore
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gabriel Barrantes
URL:
Keywords:
: 489052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-22 17:44 UTC by popov895
Modified: 2024-07-19 19:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-06-22 17:44:39 UTC
SUMMARY

Since 24.05, I've noticed that the undo/redo actions do anything. Perhaps they have to undo/redo changes in the input field, but it doesn't work now.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240618
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.3.0
KDE Gear Version: 24.05.1
Qt Version: 6.7.1
Comment 1 Bug Janitor Service 2024-06-22 19:57:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kcalc/-/merge_requests/107
Comment 2 Gabriel Barrantes 2024-06-23 15:37:59 UTC
*** Bug 489052 has been marked as a duplicate of this bug. ***
Comment 3 Gabriel Barrantes 2024-07-19 19:36:42 UTC
Git commit 25b99ab95267e32380c2754f08541efb6127adbd by Gabriel Barrantes.
Committed on 19/07/2024 at 19:27.
Pushed by gabrielbarrantes into branch 'master'.

Remap undo and redo shortcuts to the input display

M  +3    -3    kcalc.cpp
M  +46   -1    kcalc_input_display.cpp
M  +5    -1    kcalc_input_display.h

https://invent.kde.org/utilities/kcalc/-/commit/25b99ab95267e32380c2754f08541efb6127adbd