Remap undo and redo shortcuts to the input display

BUG: 488992